# OnePieceQuizCreation

./: Makefile  OP.py  One_Piece_streamlit_v1.0.py  One_Piece_streamlit_v1.1.py  One_Piece_streamlit_v1.2.py  README.md  json_print_test.py  pyproject.toml  syrup_village.json  trivia_game_streamlit.py
Old but good/: trivia_game_streamlit.py
app/: data.py  game.py  logger.py  quiz.py
app/components/: arc_select.py  end.py  questions.py  render.py  start.py
app/data/: arlong_park.json
dnu/: ONEpieceQUIZgui.py  OnePieceQuiz.py  Tutorial One.py  trivia_game_streamlit_V2.py  trivia_game_streamlit_debug.py
